k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hola-mundo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hola-mundo
  template:
    metadata:
      labels:
        app: hola-mundo
    spec:
      containers:
      - name: node-app
        image: mi-hola-mundo:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hola-mundo-service
spec:
  selector:
    app: hola-mundo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
