k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hola-mundo-service
spec:
  selector:
    app: hola-mundo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
